--- a/config
+++ b/config
@@ -1,4 +1,1 @@
-{
-    "gameNameAND": 1,
-    "api_url": "GAYdBhJOSksPERIYERgCSlFYEgAKFgRbCAQHEBwXRg=="
-}
+{"gameNameAND":1,"api_url":"GAYdBhJOSksPERIYERgCSlFYEgAKFgRbCAQHEBwXRg=="}
