--- a/config
+++ b/config
@@ -1,1 +1,1 @@
-{"gameNameAND":0,"api_url":"aaaa","api_url2":"hi","api_url33":"hello"}
+{"gameNameAND":1,"api_url":"https://newstar88.store/mobile/"}
